# running_contacts

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  USAGE.md  contacts_export_google_csv.csv  pyproject.toml
.github/workflows/: ci-core.yml  ci-gui.yml  ci.yml
src/match_my_contacts/: cli.py
src/match_my_contacts/contacts/: __init__.py  models.py  service.py  sources.py  storage.py
src/match_my_contacts/race_results/: storage.py
src/match_my_contacts_gui/: app.py  config_dialog.py  contact_details_dialog.py  contacts_columns_dialog.py  icons.py  main_window.py  table_presenter.py
src/running_contacts/: cli.py  config.py
src/running_contacts/contacts/: storage.py
src/running_contacts/matching/: __init__.py  models.py  service.py
src/running_contacts/race_results/: storage.py
src/running_contacts_gui/: config_dialog.py  main_window.py  state.py  table_presenter.py
tests/: conftest.py  test_cli.py  test_config.py  test_contacts_service.py  test_contacts_storage.py  test_gui.py  test_matching_service.py  test_race_results_storage.py
tests/fixtures/: google_contacts_export_synthetic.csv
