[project]
name = "match-my-contacts"
version = "0.1.0"
description = "Local tool for matching contacts with race results"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<1",
    "rapidfuzz>=3,<4",
    "google-api-python-client>=2,<3",
    "google-auth-oauthlib>=1,<2",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.10,<7",
]

[project.scripts]
match-my-contacts = "match_my_contacts.cli:app"
match-my-contacts-gui = "match_my_contacts_gui.app:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
